# 2014-11-mds

./: .travis.yml
tetris/clean/: CMakeLists.txt  README  piece.c  piece.h  positionInGrid.h  rgb_color.c  rgb_color.h  tetris.c  tetromino.c  tetromino.h
tetris/clean/core/: CMakeLists.txt  game.c  game.h  grid.c  grid.h  piece.c  piece.h  positionInGrid.c  rgb_color.h  tetromino.c  tetromino.h  tetromino_srs.c  tetromino_srs.h
tetris/clean/core/test/: CMakeLists.txt  test_tetris_core.c
tetris/clean/gtk/: CMakeLists.txt  gui.c  gui.h  rgb_color.c  tetris-gtk.c  tetris.c  window.c  window.h
tetris/clean/gtk/test/: CMakeLists.txt  test_tetris_gtk.c
tetris/clean/old/: grid.c  tetrominos-old.h  window.h
tetris/clean/test/: CMakeLists.txt  test_tetris.c
training/ci-plateforme-nationale/: Makefile  ci.tex
training/ci-plateforme-nationale/images/: cloudstack.xcf  jenkins-conf.xcf  jenkins-dashbord.xcf
training/notebook/: ci.ipynb
training/notebook/image/: Makefile
